refactor: enum 유효성 검증 방식 변경 - 기존에는 Enum 클래스의 static 메서드로 검증 - 커스텀 validator를 구현하여 어노테이션으로 방식 변경