@@ -3,6 +3,7 @@ package icd.onboarding.surveyproject.survey.fixtures;
 import icd.onboarding.surveyproject.survey.service.domain.Option;
 import icd.onboarding.surveyproject.survey.service.domain.Question;
 import icd.onboarding.surveyproject.survey.service.domain.Survey;
+import icd.onboarding.surveyproject.survey.service.enums.InputType;
 
 import java.util.Collections;
 import java.util.List;
@@ -13,8 +14,8 @@ public class SurveyFixtures {
 				"설문 1",
 				"설문 조사 설명",
 				List.of(
-						Question.create("텍스트 질문", "질문 1 설명", "SHORT_TEXT", false, 1, Collections.emptyList()),
-						Question.create("선택형 질문", "질문 2 설명", "SINGLE_SELECT", true, 1, List.of(Option.create("옵션 1", 1)))
+						Question.create("텍스트 질문", "질문 1 설명", InputType.SHORT_TEXT, false, 1, Collections.emptyList()),
+						Question.create("선택형 질문", "질문 2 설명", InputType.SINGLE_SELECT, true, 1, List.of(Option.create("옵션 1", 1)))
 				)
 		);
 	}
